Nav Wrapping Fix (#237)
* fix

* moar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -24,6 +24,8 @@ body {
 }
 
 
+
+
 .ant-input, .ant-select {
   font-size: 16px ;
   height: 36px;
@@ -81,6 +83,10 @@ h1 {
 .ant-layout-sider {
   background: #F6F8FA;
   border-right: 1px solid #e1e4e8;
+  width: 250px !important;
+  max-width: 250px !important;
+        flex: 0 0 250px !important;
+
 }
 
 :focus
